<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:menuCategory="secondary"
        android:id="@+id/navigation_home"
        android:icon="@mipmap/ic_home"
        android:title="@string/str_home"/>

    <item
        android:menuCategory="secondary"
        android:id="@+id/navigation_favorite"
        android:icon="@mipmap/ic_favorite_not"
        android:title="@string/str_favorite"/>

    <item
        android:menuCategory="secondary"
        android:id="@+id/navigation_shopping"
        android:icon="@mipmap/ic_shopping"
        android:title="@string/str_shopping_list"/>

    <item
        android:menuCategory="secondary"
        android:id="@+id/navigation_profile"
        android:icon="@mipmap/ic_profile"
        android:title="@string/str_profile"/>
</menu>