<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activty.CookingActivity"
    android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:background="@drawable/view_rounded_line">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="29dp"
                        android:layout_height="31dp"
                        android:src="@drawable/iv_home_leaf"
                        android:layout_marginStart="27dp"/>

                    <ImageView
                        android:layout_marginStart="10dp"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:src="@drawable/iv_home_title"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left|center">

                    <ImageView
                        android:id="@+id/iv_photo"
                        android:layout_margin="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/iv_main_course"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:gravity="bottom|right">

                    <ImageView
                        android:layout_width="29dp"
                        android:layout_height="31dp"
                        android:src="@drawable/iv_home_leaf"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#BBE415"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_margin="10dp"
                android:elevation="10dp"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@drawable/view_rounded_green">

                <TextView
                    android:id="@+id/tv_food_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/str_chicken_biryani"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/str_ingradients"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_retsept"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/tv_made"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_how_make"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    android:overScrollMode="never">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:descendantFocusability="blocksDescendants"
                        android:overScrollMode="never" />

                </androidx.core.widget.NestedScrollView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#BBE415"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_sweet_appetite"
                android:layout_gravity="center"
                android:textColor="#13A0EF"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:padding="8dp"
                android:background="@drawable/view_rounded_line"/>

        </LinearLayout>
</androidx.core.widget.NestedScrollView>
